--- a/learnico.html
+++ b/learnico.html
@@ -10,25 +10,27 @@
 </head>
 <body>
     <div class="main-container">
-        <section class="start-container">
+        <section class="start-container center-content">
             <div class="navbar">
-                <ul class="menu_ul">
-                    <li data-goto=".start-container" class="menu_li a">Home</li>
-                    <li data-goto=".platform-container" class="menu_li a">About</li>
-                    <li data-goto=".blog" class="menu_li a">Blog</li>
-                    <li data-goto=".start-learn" class="menu_li a">Contact</li>
-                    <li data-goto=".about-courses" class="menu_li a">Courses</li>
-                </ul>
-                <div class="navbar_buttons">
-                    <div class="search-container">
-                        <img src="./images/search.svg" alt="#">
-                        <a class="a right-menu search-link" href="#">Search</a>
+                <div class="navbar-center">
+                    <ul class="menu_ul">
+                        <li data-goto=".start-container" class="menu_li a">Home</li>
+                        <li data-goto=".platform-container" class="menu_li a">About</li>
+                        <li data-goto=".blog" class="menu_li a">Blog</li>
+                        <li data-goto=".start-learn" class="menu_li a">Contact</li>
+                        <li data-goto=".about-courses" class="menu_li a">Courses</li>
+                    </ul>
+                    <div class="navbar_buttons">
+                        <div class="search-container">
+                            <img src="./images/search.svg" alt="#">
+                            <a class="a right-menu search-link" href="#">Search</a>
+                        </div>
+                        <div class="cart-container">
+                            <img src="./images/shopping_cart.svg" alt="#">
+                            <a class="a right-menu" href="#">Cart</a>
+                        </div>
+                        <button class="sign-up">Sign Up</button>
                     </div>
-                    <div class="cart-container">
-                        <img src="./images/shopping_cart.svg" alt="#">
-                        <a class="a right-menu" href="#">Cart</a>
-                    </div>
-                    <button class="sign-up">Sign Up</button>
                 </div>
             </div>
             <div class="main-content">
@@ -72,11 +74,12 @@
                 </div>
             </div>
         </section>
-        <section class="sentence-container">
+        <section class="sentence-container center-content">
             <p class="sentense base-text">Trusted by the world's best companies</p>
         </section>
-        <section class="platform-container">
-            <div class="platform-container-content main-content">
+        <section class="platform-container center-content">
+            <div class="platform-container-content main-content ">
+                <!-- main-content -->
                 <div class="platform-text-content">
                     <p class="lable lable-white">About us</p>
                     <h2 class="base-title">No-code Education Platform</h2>
@@ -85,7 +88,7 @@
                 </div>
             </div>
         </section>
-        <section class="about-courses">
+        <section class="about-courses center-content">
             <div class="main-content content-position">
                 <div class="content-content-position">          
                     <img class="main-image" src="./images/IMAGE_courses.png" alt="#">          
@@ -103,7 +106,7 @@
                 </div>
             </div>
         </section>
-        <section class="about-courses">
+        <section class="about-courses center-content">
             <div class="main-content content-position">
                 <div class="content-content-position">          
                     <div class="text-content-about padding-r">
@@ -121,7 +124,7 @@
                 </div>
             </div>
         </section>
-        <section class="popular-courses-container">
+        <section class="popular-courses-container center-content">
             <div class="main-content main-content-pop">
                 <div class="pop-top">
                     <div class="pop-top_content">
@@ -173,7 +176,7 @@
                 </div>
             </div>
         </section>
-        <section class="community-container">
+        <section class="community-container center-content">
             <div class="main-content">
                 <div class="community-container_top">
                     <div class="community-container-top_content">
@@ -209,7 +212,7 @@
                 </div>
             </div>
         </section>
-        <section class="benefits">
+        <section class="benefits center-content">
             <div class="main-content">
                 <div class="ben-top">
                     <div class="ben-top_content">
@@ -250,7 +253,7 @@
                 </div> 
             </div>
         </section>
-        <section class="feedback">
+        <section class="feedback center-content">
             <div class="main-content">
                 <div class="pink-container">
                     <div class="pop-top feed-top">
@@ -345,7 +348,7 @@
                 </div>
             </div>
         </section>
-        <section class="blog">
+        <section class="blog center-content">
             <div class="main-content main-content-blog">
                 <div class="blog-top">
                     <p class="lable lable-blog">Blog</p>
@@ -406,7 +409,7 @@
                 </div>
             </div>
         </section>
-        <section class="start-learn">
+        <section class="start-learn center-content">
             <div class="start-learn_main-content">
                 <h2 class="base-title-blog">Start learning today</h2>
                 <p class="base-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.</p>
@@ -416,7 +419,7 @@
                 </div>
             </div>
         </section>
-        <section class="footer">
+        <section class="footer center-content">
             <div class="main-content">
                 <div class="flex-footer-column-content">
                     <div class="footer-top-content">
